# veeam_presence

./: .dockerignore  .gitignore  BUILD_WORKFLOW.md  DEPLOYMENT.md  Dockerfile  Dockerfile.pipeline  FUNCTION_FLOW_SPEC.md  INFRA_SETUP_PLAN.md  MIGRATION_PLAN.md  agent.py  app.py  config.py  docker-compose.yml  office_agent_spec.md  proactive_briefing.py  pyproject.toml  requirements.pipeline.txt  requirements.txt  response_cache.py  system_prompt.py  test_harness.py
agent/: Dockerfile  __init__.py  agent.py  api.py  config.py  requirements.txt  response_cache.py  server.py
appPackage/: manifest.json  manifest.template.json
cards/: __init__.py  build_preview.py  card_builder.py  generate_samples.py  renderer.py  templates.py
data/: anchors.pkl  baselines.pkl  chi.pkl  manager_gravity.pkl  mixing.pkl  new_hires.pkl  personality.pkl  pregenerated.pkl  seniority.pkl  signals.pkl  team_sync.pkl  visitors.pkl  weekend.pkl
dev_ui/: __init__.py  app.py  server.py
gateway/: Dockerfile  app.py  requirements.txt
infra/: INFRA_SETUP_PLAN.md
m365_wrapper/: Dockerfile  __init__.py  app.py  config.py  presence_client.py  requirements.txt  server.py
pipeline/: aggregate.py  anchors.py  baselines.py  chi.py  enrich.py  holidays_cal.py  manager_gravity.py  mixing.py  new_hires.py  personality.py  pregenerate.py  pull_events.py  qa_check.py  run_analytics.py  seniority.py  signals.py  team_sync.py  visitors.py  weekend.py
scripts/: build-m365-app-package.sh
shared/: __init__.py  entra_auth.py  runtime_env.py
tests/: __init__.py  conftest.py  integration_test.py  (+2 more)
(+33 files in other folders)
